--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -159,7 +159,14 @@
         <item>
          <widget class="QPushButton" name="pushButton_3">
           <property name="text">
-           <string>send</string>
+           <string>Generate</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="pushButton_4">
+          <property name="text">
+           <string>Save</string>
           </property>
          </widget>
         </item>
